--- a/SketchingTools/app/src/main/res/values/strings.xml
+++ b/SketchingTools/app/src/main/res/values/strings.xml
@@ -19,4 +19,7 @@
     <string name="bridge">桥梁</string>
     <string name="river">河流</string>
     <string name="design">自定义</string>
+
+    <string name="undo">撤销</string>
+    <string name="reset">重置</string>
 </resources>
