--- a/SketchingTools/app/src/main/res/values/strings.xml
+++ b/SketchingTools/app/src/main/res/values/strings.xml
@@ -11,10 +11,9 @@
     <!-- 宝贝寻家 -->
     <string name="baby_go_home">宝贝寻家</string>
     <string name="back">返回</string>
-    <string name="open_camera_or_open_picure">拍照</string>
 
     <string name="choose_picture">选择图形</string>
-    <string name="do_something">操作</string>
+    <string name="operation">操作</string>
     <string name="find_home">寻家</string>
 
     <string name="open_camera">打开相机</string>
